fix: 정적 파일 경로 rewrites에서 제외 (OG 이미지 수정)

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -5,7 +5,7 @@
       "destination": "https://vsbattle.onrender.com/api/:path*"
     },
     {
-      "source": "/((?!api/).*)",
+      "source": "/((?!api/|banners/|sprites/|assets/).*)",
       "destination": "/index.html"
     }
   ]
